--- a/shpg_portfolio/frontend_react/package.json
+++ b/shpg_portfolio/frontend_react/package.json
@@ -8,12 +8,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "chalk": "^5.0.0",
     "framer-motion": "^6.2.8",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "^5.0.0",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
